--- a/config.yml
+++ b/config.yml
@@ -13,6 +13,6 @@ Cloud Foundry es un PaaS (estilo Heroku) completamente Open Source que está cam
 Lo usan empresas como HP, EMC, Pivotal, GE, IBM, Intel, SAP, VMWare, y muchos más.
 Va a haber unas pizzas, cervezas y muchas cosas interesantes.
 Acá te dejo el link de la meetup para más info: http://www.meetup.com/es-ES/Buenos-Aires-Cloud-Foundry-Meetup/
-¡Muchas gracias por tu tiempo y espero verte!"
+¡Espero verte!"
 start_url: https://secure.meetup.com/es-ES/login/
 users_per_page: 20
